--- a/Client/src/app/auth/layout/auth/auth.component.html
+++ b/Client/src/app/auth/layout/auth/auth.component.html
@@ -1,1 +1,11 @@
-<p>auth works!</p>
+<div class="container vh-100 d-flex flex-wrap justify-content-center align-items-center">
+  <div class="card w-50 p-3">
+    @if (user && authService.getAccessToken()) {
+      <a href="#" data-bs-toggle="dropdown">
+        <img [src]="user.avatar" class="rounded-circle px-2" style="width: 47px;" alt="Avatar"/>
+      </a>
+    }
+    <router-outlet/>
+  </div>
+</div>
+
