--- a/Client/src/app/auth/pages/confirm-password/confirm-password.component.html
+++ b/Client/src/app/auth/pages/confirm-password/confirm-password.component.html
@@ -1,8 +1,5 @@
-@if (status === 'loading') {
-  <div>Đang xử lý...</div>
-} @else if (status === 'success') {
-  <div>Xác nhận email thành công!</div>
-} @else if (status === 'error') {
-  <div>{{ errorMessage }}</div>
-}
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <input formControlName="newPassword" type="email" placeholder="Mật khẩu mới">
+  <button type="submit" [disabled]="form.invalid">Gửi yêu cầu</button>
+</form>
 
