--- a/Client/src/app/auth/pages/forgot-password/forgot-password.component.html
+++ b/Client/src/app/auth/pages/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <input formControlName="newEmail" type="email" placeholder="Email mới">
+  <input formControlName="username" placeholder="Nhập tài khoản">
   <button type="submit" [disabled]="form.invalid">Gửi yêu cầu</button>
 </form>
 <div *ngIf="message">{{ message }}</div>
