--- a/Client/src/app/public/pages/home/home.component.html
+++ b/Client/src/app/public/pages/home/home.component.html
@@ -13,9 +13,9 @@
         <li *ngFor="let item of authService.devices"
             class="list-group-item d-flex justify-content-between align-items-center">
           @if (isCurrentDevice(item.clientId)) {
-            <span class="fw-bold text-success">{{ item.deviceType }}</span>
+            <span class="fw-bold text-success">{{ item.os }}</span>
           } @else {
-            <span>{{ item.deviceType }}</span>
+            <span>{{ item.os }}</span>
           }
           <button (click)="onDeleteDevice(item.clientId)" class="badge bg-primary rounded-pill border-0">Đăng xuất thiết
             bị
