--- a/Client/src/app/public/pages/home/home.component.html
+++ b/Client/src/app/public/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <p>home works!</p>
+<a href="javascript:void(0)" (click)="hrefTo('/user')">User</a>
 @if (user && authService.getAccessToken()) {
   <a href="javascript:void(0)">
     <img [src]="user.avatar" class="rounded-circle px-2" style="width: 47px;" alt="Avatar"/>
