--- a/Client/src/app/shared/component/crop-image/crop-image.component.html
+++ b/Client/src/app/shared/component/crop-image/crop-image.component.html
@@ -12,7 +12,6 @@
   @if (showCropper) {
     <div class="modal">
       <div class="modal-content">
-        <button class="modal-close" (click)="showCropper = false">&times;</button>
         <div class="modal-header">Cắt ảnh đại diện</div>
         <div class="modal-body">
           <image-cropper
@@ -24,16 +23,23 @@
           ></image-cropper>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-secondary" (click)="showCropper = false">Hủy</button>
-          <button class="btn btn-primary" (click)="uploadAvatar()">Xác nhận</button>
+          <button class="btn btn-secondary" (click)="cancel()">Hủy</button>
+          <button class="btn btn-primary" (click)="confirmCrop()">Xác nhận</button>
         </div>
       </div>
     </div>
   }
-  <!-- Preview ảnh -->
-  @if (croppedImage) {
-    <div class="mt-3">
-      <img alt="" [src]="croppedImage" class="img-thumbnail" width="150">
+
+  @if (showPreview) {
+    <div class="preview-container">
+      <div class="preview-image">
+        <img [src]="croppedImage" class="img-thumbnail" width="300">
+      </div>
+      <div class="preview-actions">
+        <button class="btn btn-warning" (click)="recrop()">Recrop</button>
+        <button class="btn btn-success" (click)="saveImage()">Lưu lại</button>
+<!--        <button class="btn btn-danger" (click)="cancel()">Hủy</button>-->
+      </div>
     </div>
   }
 
