--- a/WebClient/src/app/public/pages/home/home.component.html
+++ b/WebClient/src/app/public/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="position-absolute text-home">
       <h1 class="fw-bold user-select-none text-center mx-0 px-0 pt-lg-7 text-tian-light ">
         <span class="d-inline">Katsu Website</span>
-        <span class="d-block fs-4"> Web tải ứng dụng OS hỗ trợ miễn phí hahaha</span>
+        <span class="d-block fs-4"> Web tải ứng dụng OS hỗ trợ miễn phí</span>
       </h1>
     </div>
   </div>
